--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
@@ -10,10 +10,20 @@
 <h4> tarea de HTML / CSS </h4>
 </div>
 <div>
-    <span> Mi comida favorita es enpanadas</span>
-    <a href="http://estaticos.miarevista.es/media/cache/1140x_thumb/uploads/images/recipe/5edd22d35bafe854db55f541/empanada-carne.jpg"> Link a mi restaurante favorito</a>
+    <span> Mi comida favorita son las enpanadas
+    </span>
+    <a href="https://www.pasteskikos.com/">" Link a mi restaurante favorito</a>
 </div>
-<div></div>
+<div id="thirdiv">
+    <ul>
+        <li>
+            <img src="https://cdn.kiwilimon.com/recetaimagen/37490/th5-640x426-47376.jpg" alt="foto de enpanada 1">
+        </li>
+        <li>
+            <img> src="https://estaticos.miarevista.es/media/cache/1140x_thumb/uploads/images/article/5e67c8a65cafe84ab2efaffa/istock-1171946922_0.jpg" alt="foto de enpanada 2">
+        </li>
+    </ul>
+</div>
 
 
 
