--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
@@ -7,7 +7,7 @@
         </style>
         <link rel="stylesheet" href="./styles.css">
     </head>
-    <body>
+    <body background="https://thumbs.dreamstime.com/b/modelo-de-empanadas-pollo-incons%C3%BAtil-102533499.jpg" >
         <div class="divClass">
             <h1> Carlos Arellano Oliver</h1>
             <h3> Henry </h3>
@@ -27,5 +27,6 @@
                 </li>
             </ul>
         </div>
+        
     </body>
 </html>
